# inmoov_bicep2

src/: package.xml  setup.cfg  setup.py
src/py_bicep_angle_v2/: publisher.py  subscriber.py
